1. changes wa.me and copyright

--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
             <div class="container">
                 <div class="clearfix">
                     <ul class="float_left top-bar-info">
-                        <li><i class="icon-phone-call"></i>Phone: 012 717 1530</li>
+                        <li><i class="icon-phone-call"></i>Phone: <a href="https://wa.me/60127171530" target="_blank">012 717 1530</a></li>
                         <li><i class="icon-e-mail-envelope"></i>kavin@ecobatt.co</li>
                     </ul>
                     <div class="right-column float_right">
                         <ul class="social list_inline">
-                            <li><a href="#"><i class="fab fa-facebook"></i></a></li>
-                            <li><a href="#"><i class="fab fa-instagram"></i></a></li>
+                            <li><a href="https://fb.me/ecobatt.co" target="_blank"><i class="fab fa-facebook"></i></a></li>
+                            <li><a href="https://instagram.com/ecobatt.co" target="_blank"><i class="fab fa-instagram"></i></a></li>
                         </ul>
                     </div>
                 </div>
@@ -370,7 +370,7 @@
                         <span style="color: white;">
                             Name: Pusat Servis Bateri TOMBATT <br>
                             Address: EG -53AF Block E, Jalan Cheras Prima 5, 43000, Kajang, Selangor <br>
-                            Contact: 012-3936338 (TOM)
+                            Contact: <a href="https://wa.me/60123936338" target="_blank">012-3936338</a> (TOM)
                         </span>
                         <br><br><br>
                     </div>
@@ -378,7 +378,7 @@
                         <span style="color: white;">
                             Name: Puncak Alam TYRE 8 TRADING SDN BHD <br>
                             Address: Taman Industri Alam Jaya, 42300, Bandar Puncak Alam, Selangor <br>
-                            Contact: 016-3044571 (MOHD ALI)
+                            Contact: <a href="https://wa.me/60163044571" target="_blank">016-3044571</a> (MOHD ALI)
                         </span>
                         <br><br><br>
                     </div>
@@ -386,7 +386,7 @@
                         <span style="color: white;">
                             Name: Bateri Teguh Jaya <br>
                             Address: 20, Jalan Pasir Puteh 31650, Ipoh, Perak <br>
-                            Contact: 019-8825886 (NIK) & 018-5751319 (WAH)
+                            Contact: <a href="https://wa.me/60198825886" target="_blank">019-8825886</a> (NIK) & <a href="https://wa.me/60185751319" target="_blank">018-5751319</a> (WAH)
                         </span>
                         <br><br><br>
                     </div>
@@ -394,18 +394,17 @@
                         <span style="color: white;">
                             Name: Soka Lube Marketing <br>
                             Address: Lot 1274 Batu 8 Bukit Kemuning, 40460, Shah Alam <br>
-                            Contact: 012-2997599 (MS.TIEW)
+                            Contact: <a href="https://wa.me/60122997599" target="_blank">012-2997599</a> (MS.TIEW)
                         </span>
                         <br><br><br>
                     </div>
                 </div>
-                <br><br>
                 <div class="row">
                     <div class="col-md-3">
                         <span style="color: white;">
                             Name: Smart Battery Specialist<br>
                             Address: AG 3C, Jalan PJU 1019B, Prima Damansara, 47830, Petaling Jaya, Selangor <br>
-                            Contact: 018-7712551 (AKRAM)
+                            Contact: <a href="https://wa.me/60187712551" target="_blank">018-7712551</a> (AKRAM)
                         </span>
                         <br><br>
                     </div>
@@ -498,7 +497,7 @@
         <section class="footer-bottom">
             <div class="container">
                 <div class="pull-left copy-text">
-                    <p>Copyright © EcoBatt 2019. All Rights Reserved.</p>
+                    <p>Copyright © EcoBatt 2020. All Rights Reserved.</p>
                 </div><!-- /.pull-right -->
             </div><!-- /.container -->
         </section>
