1. added whatsapp button 2. remove header top

--- a/index.html
+++ b/index.html
@@ -16,47 +16,107 @@
     <link rel="icon" type="image/png" href="images/fav-icon/favicon-32x32.png" sizes="32x32">
     <link rel="icon" type="image/png" href="images/fav-icon/favicon-16x16.png" sizes="16x16">
 
+    <!-- WhatsApp lib   -->
+    <!--Jquery-->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+    <!--Floating WhatsApp css-->
+    <link rel="stylesheet" href="https://rawcdn.githack.com/rafaelbotazini/floating-whatsapp/3d18b26d5c7d430a1ab0b664f8ca6b69014aed68/floating-wpp.min.css">
+    <!--Floating WhatsApp javascript-->
+    <script type="text/javascript" src="https://rawcdn.githack.com/rafaelbotazini/floating-whatsapp/3d18b26d5c7d430a1ab0b664f8ca6b69014aed68/floating-wpp.min.js"></script>
+
     <!-- importing font awesome css -->
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
-        integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+
+    <!--    function    -->
+    <script type="text/javascript">
+        $(function () {
+            $('#WAButton').floatingWhatsApp({
+                phone: '1231231231', //WhatsApp Business phone number International format-
+                headerTitle: 'Chat with us on WhatsApp!', //Popup Title
+                popupMessage: 'Hello, how can we help you?', //Popup Message
+                showPopup: true, //Enables popup display
+                buttonImage: '<img src="https://rawcdn.githack.com/rafaelbotazini/floating-whatsapp/3d18b26d5c7d430a1ab0b664f8ca6b69014aed68/whatsapp.svg" />', //Button Image
+                //headerColor: 'crimson', //Custom header color
+                //backgroundColor: 'crimson', //Custom background button color
+                position: "right"
+            });
+        });
+    </script>
+
+    <style>
+
+        body {
+            font-family: Arial, Helvetica, sans-serif;
+        }
+
+        .float{
+            position:fixed;
+            width:60px;
+            height:60px;
+            bottom:40px;
+            right:40px;
+            background-color:#25d366;
+            color:#FFF;
+            border-radius:50px;
+            text-align:center;
+            font-size:30px;
+            box-shadow: 2px 2px 3px #999;
+            z-index:100;
+        }
+
+        .my-float{
+            margin-top:16px;
+        }
+
+    </style>
+
 </head>
+
 
 <body>
 
-    <div class="boxed_wrapper">
+    <div class="boxed_wrapper" id="home">
 
-        <div class="top-bar">
-            <div class="container">
-                <div class="clearfix">
-                    <ul class="float_left top-bar-info">
-                        <li><i class="icon-phone-call"></i>Phone: <a href="https://wa.me/60127171530" target="_blank">012 717 1530</a></li>
-                        <li><i class="icon-e-mail-envelope"></i>kavin@ecobatt.co</li>
-                    </ul>
-                    <div class="right-column float_right">
-                        <ul class="social list_inline">
-                            <li><a href="https://fb.me/ecobatt.co" target="_blank"><i class="fab fa-facebook"></i></a></li>
-                            <li><a href="https://instagram.com/ecobatt.co" target="_blank"><i class="fab fa-instagram"></i></a></li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-        </div>
+        <!--   WhatsApp button    -->
+        <a href="https://api.whatsapp.com/send?phone=+601237171530&text=Hello!%20I'm%20interested%20in%20your%20service." class="float" target="_blank">
+            <i class="fa fa-whatsapp my-float"></i>
+        </a>
 
-        <section class="theme_menu stricky" id="1" style="background-color: black">
+<!--        <div class="top-bar">-->
+<!--            <div class="container">-->
+<!--                <div class="clearfix">-->
+<!--                    <ul class="float_left top-bar-info">-->
+<!--                        <li><i class="icon-phone-call"></i>Phone: <a href="https://wa.me/60127171530" target="_blank">012 717 1530</a></li>-->
+<!--                        <li><i class="icon-e-mail-envelope"></i>kavin@ecobatt.co</li>-->
+<!--                    </ul>-->
+<!--                    <div class="right-column float_right">-->
+<!--                        <ul class="social list_inline">-->
+<!--                            <li><a href="https://fb.me/ecobatt.co" target="_blank"><i class="fab fa-facebook"></i></a></li>-->
+<!--                            <li><a href="https://instagram.com/ecobatt.co" target="_blank"><i class="fab fa-instagram"></i></a></li>-->
+<!--                        </ul>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--        </div>-->
+
+        <section class="theme_menu stricky" style="background-color: black">
             <div class="container center">
                 <div class="col-md-3">
                     <div class="main-logo">
-                        <img src="images/logo/final.png" alt="" width="100px" height="70px">
+                        <a href="#home"><img src="images/logo/final.png" alt="" width="100px" height="70px"></a>
                     </div>
                 </div>
                 <div class="center" style="margin: auto">
                     <nav class="menuzord" id="main_menu">
                         <ul class="menuzord-menu">
 
-                            <li><a href="#1" style="color: #fff">Home</a></li>
-                            <li><a href="#2" style="color: #fff">Services</a></li>
-                            <li><a href="#3" style="color: #fff">Prices</a></li>
-                            <li><a href="#4" style="color: #fff">Contact</a></li>
+                            <li><a href="#home" style="color: #fff">Home</a></li>
+                            <li><a href="#services" style="color: #fff">Services</a></li>
+                            <li><a href="#branches" style="color: #fff">Branches</a></li>
+                            <li><a href="#prices" style="color: #fff">Prices</a></li>
+                            <li><a href="#contact" style="color: #fff">Contact</a></li>
 
                         </ul>
                     </nav>
@@ -112,8 +172,7 @@
         </section>
         <!--End rev slider wrapper-->
 
-
-        <section class="service sec-padd3" id="2" style="background-color: black">
+        <section class="service sec-padd3" id="services" style="background-color: black">
             <div class="container">
                 <div class="section-title center">
                     <img src="images/clients/promotion.jpeg">
@@ -188,7 +247,6 @@
         </section>
 
         <!-- Interesting Fact Section -->
-
         <section class="fact-counter style-2 sec-padd" style="background-image: url(images/background/5.jpg);">
             <div class="container">
                 <div class="section-title center">
@@ -237,9 +295,8 @@
         </section>
 
         <!-- Our Gallery Section -->
-        <section class="gallery sec-padd3 style-2 default-gallery"
-            style="background-image: url(images/background/8.jpg)" ;>
-            <div class="container" id="3">
+        <section class="gallery sec-padd3 style-2 default-gallery" style="background-image: url(images/background/8.jpg)" ;>
+            <div class="container" id="prices">
                 <div class="section-title">
                     <h2>Our Batteries Prices</h2>
                 </div>
@@ -325,7 +382,7 @@
             </div>
         </section>
 
-
+        <!--   Our Images     -->
         <section class="clients-section sec-padd">
             <div class="container">
                 <div class="section-title center">
@@ -356,9 +413,8 @@
         </section>
 
         <!-- Sub-branches section -->
-
-        <section class="service sec-padd3" id="2" style="background-color: black">
-            <div class="container">
+        <section class="service sec-padd3" style="background-color: black">
+            <div class="container" id="branches">
 
                 <div class="section-title center">
                     <br><br>
@@ -414,12 +470,11 @@
             </div>
         </section>
 
-
         <!-- Footer section -->
         <footer class="main-footer">
 
             <!--Widgets Section-->
-            <div class="widgets-section">
+            <div class="widgets-section" id="contact">
                 <div class="container">
 
                     <div class="row">
@@ -452,7 +507,7 @@
 
                                     <div class="footer-widget about-column">
                                         <br>
-                                        <div class="section-title" id="4">
+                                        <div class="section-title">
                                             <h3 style="color: white;">Contact Us</h3>
                                         </div>
 
@@ -503,7 +558,8 @@
         </section>
 
         <!-- Scroll Top  -->
-        <button class="scroll-top tran3s color2_bg"><span class="fa fa-angle-up"></span></button>
+<!--        <button class="scroll-top tran3s color2_bg"><span class="fa fa-angle-up"></span></button>-->
+
         <!-- preloader  -->
         <div class="preloader"></div>
 
@@ -527,7 +583,6 @@
         <script src="js/isotope.js"></script>
         <script src="js/pie-chart.js"></script>
 
-
         <!-- revolution slider js -->
         <script src="js/rev-slider/jquery.themepunch.tools.min.js"></script>
         <script src="js/rev-slider/jquery.themepunch.revolution.min.js"></script>
@@ -540,13 +595,10 @@
         <script src="js/rev-slider/revolution.extension.parallax.min.js"></script>
         <script src="js/rev-slider/revolution.extension.slideanims.min.js"></script>
         <script src="js/rev-slider/revolution.extension.video.min.js"></script>
-
-
         <script src="js/custom.js"></script>
 
     </div>
 
 </body>
-
 
 </html>
