1. FIX WRONG NUMBER

--- a/index.html
+++ b/index.html
@@ -29,22 +29,6 @@
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 
-    <!--    function    -->
-    <script type="text/javascript">
-        $(function () {
-            $('#WAButton').floatingWhatsApp({
-                phone: '1231231231', //WhatsApp Business phone number International format-
-                headerTitle: 'Chat with us on WhatsApp!', //Popup Title
-                popupMessage: 'Hello, how can we help you?', //Popup Message
-                showPopup: true, //Enables popup display
-                buttonImage: '<img src="https://rawcdn.githack.com/rafaelbotazini/floating-whatsapp/3d18b26d5c7d430a1ab0b664f8ca6b69014aed68/whatsapp.svg" />', //Button Image
-                //headerColor: 'crimson', //Custom header color
-                //backgroundColor: 'crimson', //Custom background button color
-                position: "right"
-            });
-        });
-    </script>
-
     <style>
 
         body {
@@ -80,7 +64,7 @@
     <div class="boxed_wrapper" id="home">
 
         <!--   WhatsApp button    -->
-        <a href="https://api.whatsapp.com/send?phone=+601237171530&text=Hello!%20I'm%20interested%20in%20your%20service." class="float" target="_blank">
+        <a href="https://api.whatsapp.com/send?phone=60127171530&text=Hello!%20I'm%20interested%20in%20your%20service." class="float" target="_blank">
             <i class="fa fa-whatsapp my-float"></i>
         </a>
 
